Release 0.2.0
